--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "resolveJsonModule": true,
     "allowJs": true,
     "baseUrl": "./src",
+    "experimentalDecorators": true,
     "paths": {
       "~/*": ["*"]
     }
