--- a/package.json
+++ b/package.json
@@ -260,10 +260,12 @@
     "history": "^5.0.0",
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
+    "notistack": "^1.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
+    "sass-resources-loader": "^2.2.3",
     "source-map-support": "^0.5.19",
     "tough-cookie": "^4.0.0"
   },
