--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir src",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
     "package": "rimraf -rf src/dist && yarn build && electron-builder build --publish never",
+    "package:debug": "rimraf -rf src/dist && cross-env DEBUG_PROD=true yarn build && cross-env DEBUG_PROD=true electron-builder build --publish never",
     "postinstall": "node -r @babel/register .erb/scripts/CheckNativeDep.js && electron-builder install-app-deps && yarn cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.babel.js && opencollective-postinstall && yarn-deduplicate yarn.lock",
     "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && cross-env yarn start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ./.erb/scripts/BabelRegister ./src/main.dev.ts",
@@ -251,8 +252,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@types/throttle-debounce": "^2.1.0",
     "clsx": "^1.1.1",
-    "debounce": "^1.2.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
@@ -260,13 +261,16 @@
     "history": "^5.0.0",
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
+    "moment": "^2.29.1",
     "notistack": "^1.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
     "sass-resources-loader": "^2.2.3",
     "source-map-support": "^0.5.19",
+    "throttle-debounce": "^3.0.1",
     "tough-cookie": "^4.0.0"
   },
   "devEngines": {
