--- a/package.json
+++ b/package.json
@@ -183,11 +183,13 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.6",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.175",
     "@types/node": "14.14.10",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/throttle-debounce": "^2.1.0",
     "@types/tough-cookie": "^4.0.0",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -253,13 +255,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@types/throttle-debounce": "^2.1.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "clsx": "^1.1.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "got": "^11.8.2",
     "history": "^5.0.0",
+    "lodash": "^4.17.21",
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
     "moment": "^2.29.1",
