--- a/package.json
+++ b/package.json
@@ -262,6 +262,7 @@
     "electron-updater": "^4.3.4",
     "got": "^11.8.2",
     "history": "^5.0.0",
+    "https-proxy-agent": "^5.0.1",
     "lodash": "^4.17.21",
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
@@ -273,6 +274,7 @@
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
     "sass-resources-loader": "^2.2.3",
+    "socks-proxy-agent": "^7.0.0",
     "source-map-support": "^0.5.19",
     "throttle-debounce": "^3.0.1",
     "tough-cookie": "^4.0.0"
