--- a/package.json
+++ b/package.json
@@ -207,7 +207,7 @@
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "detect-port": "^1.3.0",
-    "electron": "^11.0.1",
+    "electron": "^20.0.0",
     "electron-builder": "^22.3.6",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
@@ -234,12 +234,12 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
     "opencollective-postinstall": "^2.0.3",
     "prettier": "^2.0.5",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.0",
+    "sass": "^1.63.6",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
@@ -249,8 +249,7 @@
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.4.0",
-    "yarn-deduplicate": "^3.1.0"
+    "webpack-merge": "^5.4.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -267,7 +266,7 @@
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
     "moment": "^2.29.1",
-    "notistack": "^1.0.9",
+    "notistack": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.2.0",
@@ -310,5 +309,6 @@
     "baseBranches": [
       "next"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.21"
 }
