--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:renderer": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.renderer.prod.babel.js",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir src",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
-    "package": "rimraf -rf src/dist && yarn build && electron-builder build --publish never",
+    "package": "rimraf -rf src/dist && yarn build && electron-builder build --publish never && powershell cp libs release/win-unpacked -r",
     "package:debug": "rimraf -rf src/dist && cross-env DEBUG_PROD=true yarn build && cross-env DEBUG_PROD=true electron-builder build --publish never",
     "postinstall": "node -r @babel/register .erb/scripts/CheckNativeDep.js && electron-builder install-app-deps && yarn cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.babel.js && opencollective-postinstall && yarn-deduplicate yarn.lock",
     "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && cross-env yarn start:renderer",
@@ -252,10 +252,13 @@
     "webpack-merge": "^5.4.0"
   },
   "dependencies": {
+    "@date-io/dayjs": "1.x",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.11",
     "clsx": "^1.1.1",
+    "dayjs": "^1.11.10",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
